...
private fun TimeUnit(
    value: String,
    onValueChange: (String) -> Unit,
    onIncrease: () -> Unit,
    onDecrease: () -> Unit,
    label: String,
    tag: String,
    maximum: Int,
    imeAction: ImeAction,
) {
    val colors = LocalHopeColors.current
    val focusManager = LocalFocusManager.current
    val interactions = remember { MutableInteractionSource() }
...
